@@ -1,3 +1,7 @@
+2011-05-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* update existentials in external windows
+
 2011-05-27  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* external node windows on mouse button 2
